# sluttools

./: .env  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FLACCID_INTEGRATION_GUIDE.md  LICENSE  MANIFEST.in  Makefile  Minimal Focus_songshift.json  Minimal | Focus_unmatched.json  Minimal_Focus_unmatched.json  README.md  README_CLI.md  REORGANIZATION_PLAN.md  REORGANIZATION_SUMMARY.md  SECURITY.md  USAGE-CONFIG.md  musictools  mypy.ini  out.csv  out.json  pyproject.toml  qobuz_auth.py  requirements-dev.txt  requirements.txt  run_tests.py  setup.py  setup_script.sh  sluttools_standalone.py  tidal2qobuz.py  tidal2qobuz.py.bak  tox.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
archive/: files.txt  flacdb_tool.py  g.py.bak  g2.py  simple_cli.py
docs/: API.md  INSTALLATION.md  PROJECT_STRUCTURE.md  REFACTOR_PROPOSAL.md  conf.py  tasks.md
examples/: James Blake.m3u  README.md  togo.csv  y.csv
examples/playlists/: The xx.m3u
music_automation/: __init__.py  flac_database.py  playlist_copier.py
music_automation/core/: __init__.py  database.py  matcher.py
old_tests/: debug_match.py  test_flac_scan.py  test_full_workflow.py
scripts/: check_all.sh  find_life.py  main.py  tidal2qobuz.py
scripts/archive/: copier.py  database.py  g.py  gg.py  matcher.py  processor.py
sluttools/: __init__.py  __main__.py  cli.py  config.py  database.py  example_usage.py  match_visualizer.py  matcher.py  matcher_fast.py  matching.py  metadata.py  playlist.py  transparent_matching.py  wizard.py
src/music_automation/: __init__.py  flaccid_examples.py  integration.py
src/music_automation/cli/: __init__.py  main.py
src/music_automation/core/: __init__.py  copier.py  database.py  matcher.py  processor.py
src/music_automation/utils/: __init__.py
tests/: __init__.py  conftest.py  test_database.py  test_matcher.py  test_matching.py  test_quick_match.py
