[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "music-automation-toolkit"
version = "2.0.0"
description = "A comprehensive toolkit for managing and cataloging large music libraries"
authors = ["Georgie <geoooooorges@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "music_automation", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.11"
mutagen = ">=1.47.0"
pandas = ">=2.0.0"
rich = ">=13.0.0"
fuzzywuzzy = ">=0.18.0"
python-levenshtein = ">=0.21.0"
openpyxl = ">=3.1.0"
aiofiles = "*"
requests = "*"
sqlite-utils = "*"
tqdm = "*"
rapidfuzz = "*"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-cov = ">=4.0.0"
black = ">=23.0.0"
flake8 = ">=6.0.0"
isort = ">=5.12.0"
mypy = ">=1.0.0"
bandit = ">=1.7.0"
safety = ">=2.3.0"
pre-commit = ">=3.0.0"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--verbose --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
