[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sluttools"
version = "2.1.0"
description = "Get. Match. Tag. Out."
authors = ["Georgie <geoooooorges@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "sluttools" }
]

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.7.0"
pandas = "^2.0.3"
pathlib = "^1.0.1"
tqdm = "^4.65.0"
mutagen = "^1.47.0"
fuzzywuzzy = "^0.18.0"
python-Levenshtein = "^0.23.0"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
aiofiles = "^23.2.1"
click = "^8.1.7"
pyflakes = "^3.1.0"
pytz = "^2023.3"
six = "^1.16.0"
pyyaml = "^6.0.1"
nltk = "^3.8.1"
numpy = "^1.25.2"
openpyxl = "^3.1.2"
sqlite-utils = "*"
rapidfuzz = "*"
setuptools = "^80.9.0"
pandas-stubs = "==2.3.0.250703"
typing-extensions = "^4.14.1"
matcher = "^0.2"
thefuzz = "^0.22.1"
typer = {extras = ["all"], version = "^0.12.3"}
certifi = "^2025.8.3"
keyring = "^25.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
flake8 = "^7.0.0"
black = "^24.3.0"
isort = "^5.12.0"
coverage = "^7.3.1"
pytest-cov = ">=4.0.0"
bandit = ">=1.7.0"
safety = ">=2.3.0"
pre-commit = ">=3.0.0"
mypy = "^1.8.0"

[tool.poetry.scripts]
fla = "sluttools.cli:main"
slut = "sluttools.cli:app"
slut-match = "sluttools.matcher_fast:main"

[tool.black]
line-length = 88
target-version = ['py311']
include = '''\.pyi?$'''
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--verbose --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
